Fix images displaying in a squished manner (#1260)
* Fixed squished images

* Added change based on comments

* Added new line to fix error

--- a/docs/assets/css/variation.less
+++ b/docs/assets/css/variation.less
@@ -36,10 +36,6 @@
         padding-left: 1rem;
         padding-right: 1rem;
     }
-
-    table {
-        .u-w100pct();
-    }
 }
 
 .m-variation {
@@ -85,4 +81,13 @@
 
 .m-list__horizontal-spaced > .m-list_item {
     margin-bottom: unit( 15px / @base-font-size-px, em );
+}
+
+// Gives 100% width to all tables
+table {
+    .u-w100pct();
+}
+
+.a-live_code table {
+    width: inherit;
 }
